--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/BasicDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/BasicDetails.cshtml
@@ -169,8 +169,7 @@
     @Html.HiddenFor(model => model.VacancyGuid)
 
     <div class="form-group">
-        <button type="submit" class="button" name="CreateVacancy" value="CreateVacancy">Save and continue</button>
-        <button id="createVacancyAndExit" type="submit" class="button-link" name="CreateVacancy" value="CreateVacancyAndExit">Save and exit</button>
+        <button type="submit" class="button">Save</button>
     </div>
 }
 
