--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/RequirementsAndProspects.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/RequirementsAndProspects.cshtml
@@ -35,7 +35,6 @@
         </div>
     </section>
     <div class="grid grid-1-2">
-        <button type="submit" class="button" name="VacancyRequirementsProspects" value="VacancyRequirementsProspects">Save and continue</button>
-        <button id="VacancyRequirementsProspectsAndExit" type="submit" class="button-link" name="VacancyRequirementsProspects" value="VacancyRequirementsProspectsAndExit">Save and exit</button>
+        <button type="submit" class="button">Save</button>
     </div>
 }
