--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Review.cshtml
@@ -13,6 +13,7 @@
             <div class="hgroup text">
                 <h1 class="heading-xlarge" id="vacancy-title" itemprop="title">@Model.NewVacancyViewModel.Title (Preview)</h1>
                 <p class="subtitle" id="vacancy-subtitle-employer-name" itemprop="hiringOrganization">@Model.NewVacancyViewModel.ProviderSiteEmployerLink.Employer.Name</p>
+                <a href="@Url.RouteUrl(ManagementRouteNames.BasicDetails, new { vacancyReferencenumber = Model.VacancyReferenceNumber})">Edit/Comment</a>
             </div>
         </div>
         <div class="grid grid-1-3">
@@ -27,6 +28,7 @@
             <div class="inner-block-padr">
                 <div class="text" itemprop="description">
                     <p id="vacancy-description">@Model.NewVacancyViewModel.ShortDescription</p>
+                    <a href="@Url.RouteUrl(ManagementRouteNames.BasicDetails, new { vacancyReferencenumber = Model.VacancyReferenceNumber})">Edit/Comment</a>
                 </div>
             </div>
         </div>
@@ -38,6 +40,7 @@
                 <p id="vacancy-closing-date" class="copy-16">
                     Closing date: @Model.VacancySummaryViewModel.ClosingDate.Date.ToFriendlyClosingToday()
                     <i class="fa fa-flag the-icon" style="color: red;" title="@message"></i>
+                    <a href="@Url.RouteUrl(ManagementRouteNames.Summary, new { vacancyReferencenumber = Model.VacancyReferenceNumber})">Edit/Comment</a>
                 </p>
             }
             else
@@ -45,6 +48,7 @@
                 <p id="vacancy-closing-date" class="copy-16">
                     Closing date: @Model.VacancySummaryViewModel.ClosingDate.Date.ToFriendlyClosingToday()
                     <i class="fa fa-check the-icon" style="color: green;"></i>
+                    <a href="@Url.RouteUrl(ManagementRouteNames.Summary, new { vacancyReferencenumber = Model.VacancyReferenceNumber})">Edit/Comment</a>
                 </p>
             }
         </div>
@@ -61,6 +65,7 @@
                     {
                         <br />@:(the hours are based on the candidate being over 18)
                         }
+                    <a href="@Url.RouteUrl(ManagementRouteNames.Summary, new { vacancyReferencenumber = Model.VacancyReferenceNumber})">Edit/Comment</a>
                 </p>
 
                 <h3 class="bold-small">
@@ -80,6 +85,7 @@
                             The current NMW rates are £@Wages.Between18And20NationalMinimumWage for 18 to 20 year-olds and £@Wages.Over21NationalMinimumWage for anyone aged 21 and over.
                             Apprentices are paid for their normal working hours and training that’s part of their apprenticeship (usually one day per week).
                         </div>
+                        <a href="@Url.RouteUrl(ManagementRouteNames.Summary, new { vacancyReferencenumber = Model.VacancyReferenceNumber})">Edit/Comment</a>
                     </details>
                 }
 
@@ -103,7 +109,8 @@
                     var message = ViewData.ModelState.WarningMessageFor("VacancySummaryViewModel.PossibleStartDate");
                     <p id="vacancy-start-date">
                         @Html.DisplayFor(m => Model.VacancySummaryViewModel.PossibleStartDate.Date)
-                    <i class="fa fa-flag the-icon" style="color: red;" title="@message"></i>
+                        <i class="fa fa-flag the-icon" style="color: red;" title="@message"></i>
+                        <a href="@Url.RouteUrl(ManagementRouteNames.Summary, new { vacancyReferencenumber = Model.VacancyReferenceNumber})">Edit/Comment</a>
                 </p>
                 }
                 else
@@ -111,11 +118,13 @@
                     <p id="vacancy-start-date">
                         @Html.DisplayFor(m => Model.VacancySummaryViewModel.PossibleStartDate.Date)
                         <i class="fa fa-check the-icon" style="color: green;"></i>
+                        <a href="@Url.RouteUrl(ManagementRouteNames.Summary, new { vacancyReferencenumber = Model.VacancyReferenceNumber})">Edit/Comment</a>
                     </p>
                 }
 
                 <h3 class="bold-small">Apprenticeship level</h3>
                 <p id="vacancy-type" itemprop="employmentType">@Model.NewVacancyViewModel.ApprenticeshipLevel Level Apprenticeship</p>
+                <a href="@Url.RouteUrl(ManagementRouteNames.BasicDetails, new { vacancyReferencenumber = Model.VacancyReferenceNumber})">Edit/Comment</a>
 
                 <h3 class="bold-small">Reference number</h3>
                 <p id="vacancy-reference-id">@Model.VacancyReferenceNumber</p>
@@ -124,6 +133,7 @@
         <div class="grid grid-2-3">
             <div class="text" itemprop="responsibilities">
                 <p id="vacancy-full-descrpition">@Html.Raw(Model.VacancySummaryViewModel.LongDescription)</p>
+                <a href="@Url.RouteUrl(ManagementRouteNames.Summary, new { vacancyReferencenumber = Model.VacancyReferenceNumber})">Edit/Comment</a>
             </div>
         </div>
 
@@ -137,16 +147,19 @@
                     {
                         <h3 class="heading-small">Desired skills</h3>
                         <p id="vacancy-skills-required" itemprop="skills">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.DesiredSkills)</p>
+                        <a href="@Url.RouteUrl(ManagementRouteNames.RequirementsAndProspoects, new { vacancyReferencenumber = Model.VacancyReferenceNumber})">Edit/Comment</a>
                     }
                     @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.PersonalQualities))
                     {
                         <h3 class="heading-small">Personal qualities</h3>
                         <p id="vacancy-qualities-required" itemprop="qualities">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.PersonalQualities)</p>
+                        <a href="@Url.RouteUrl(ManagementRouteNames.RequirementsAndProspoects, new { vacancyReferencenumber = Model.VacancyReferenceNumber})">Edit/Comment</a>
                     }
                     @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.DesiredQualifications))
                     {
                         <h3 class="heading-small">Qualifications required</h3>
                         <p id="vacancy-qualifications-required" itemprop="qualifications">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.DesiredQualifications)</p>
+                        <a href="@Url.RouteUrl(ManagementRouteNames.RequirementsAndProspoects, new { vacancyReferencenumber = Model.VacancyReferenceNumber})">Edit/Comment</a>
                     }
 
                 </div>
@@ -155,14 +168,16 @@
         <div class="grid grid-1-2">
             <div class="text">
                 @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.FutureProspects))
-            {
+                {
                     <h3 class="heading-small">Future prospects</h3>
                     <p id="vacancy-future-prospects" itemprop="incentives">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.FutureProspects)</p>
+                    <a href="@Url.RouteUrl(ManagementRouteNames.RequirementsAndProspoects, new {vacancyReferencenumber = Model.VacancyReferenceNumber})">Edit/Comment</a>
                 }
                 @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.ThingsToConsider))
-            {
+                {
                     <h3 class="heading-small">Things to consider</h3>
                     <p id="vacancy-reality-check" itemprop="incentives">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.ThingsToConsider)</p>
+                    <a href="@Url.RouteUrl(ManagementRouteNames.RequirementsAndProspoects, new {vacancyReferencenumber = Model.VacancyReferenceNumber})">Edit/Comment</a>
                 }
             </div>
         </div>
@@ -182,11 +197,13 @@
                         {
                             <h3 class="heading-small">First question</h3>
                             <p>@Html.Raw(Model.VacancyQuestionsViewModel.FirstQuestion)</p>
+                            <a href="@Url.RouteUrl(ManagementRouteNames.Questions, new { vacancyReferencenumber = Model.VacancyReferenceNumber})">Edit/Comment</a>
                         }
                         @if (!string.IsNullOrWhiteSpace(Model.VacancyQuestionsViewModel.SecondQuestion))
                         {
                             <h3 class="heading-small">Second question</h3>
                             <p>@Html.Raw(Model.VacancyQuestionsViewModel.SecondQuestion)</p>
+                            <a href="@Url.RouteUrl(ManagementRouteNames.Questions, new { vacancyReferencenumber = Model.VacancyReferenceNumber})">Edit/Comment</a>
                         }
                     </div>
                 </div>
@@ -218,6 +235,7 @@
                                    target="_blank"
                                    title="@Model.NewVacancyViewModel.ProviderSiteEmployerLink.Employer.Name Website" rel="external">@Model.NewVacancyViewModel.ProviderSiteEmployerLink.WebsiteUrl</a>
                                 <i class="fa fa-check the-icon" style="color: green;"></i>
+                                <a href="@Url.RouteUrl(ManagementRouteNames.BasicDetails, new { vacancyReferencenumber = Model.VacancyReferenceNumber})">Edit/Comment</a>
                             </p>
                         }
                         <div id="vacancy-address" itemscope itemtype="http://schema.org/PostalAddress">
@@ -229,6 +247,7 @@
                                 <p class="small-btm-margin" itemprop="addressRegion">@Model.NewVacancyViewModel.ProviderSiteEmployerLink.Employer.Address.AddressLine4</p>
                                 <p class="small-btm-margin" itemprop="postalCode">@Model.NewVacancyViewModel.ProviderSiteEmployerLink.Employer.Address.Postcode</p>
                             </div>
+                            <a href="@Url.RouteUrl(ManagementRouteNames.BasicDetails, new { vacancyReferencenumber = Model.VacancyReferenceNumber})">Edit/Comment</a>
                         </div>
                     </div>
                 </div>
@@ -251,11 +270,13 @@
                 <p id="application-instructions">
                     @Model.NewVacancyViewModel.OfflineApplicationInstructions
                 </p>
+                <a href="@Url.RouteUrl(ManagementRouteNames.BasicDetails, new { vacancyReferencenumber = Model.VacancyReferenceNumber})">Edit/Comment</a>
             </div>
             <div class="form-group">
                 <p class="no-btm-margin">This apprenticeship requires you to apply through the employer's website.</p>
                 <a id="external-employer-website" rel="external" href="@Model.NewVacancyViewModel.OfflineApplicationUrl" target="_blank">@Model.NewVacancyViewModel.OfflineApplicationUrl</a>
                 <i class="fa fa-check the-icon" style="color: green;"></i>
+                <a href="@Url.RouteUrl(ManagementRouteNames.BasicDetails, new { vacancyReferencenumber = Model.VacancyReferenceNumber})">Edit/Comment</a>
             </div>
         </section>
     }
