--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/_closingDate.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/_closingDate.cshtml
@@ -9,15 +9,15 @@
     }*/
     if (daysTillClose == 0)
     {
-        <span class="note-text" style="color: red">closing today</span>
+        <span class="note-text" style="color: red; font-weight: bold">closing today</span>
     }
     if (daysTillClose == 1)
     {
-        <span class="note-text" style="color: red">closing in 1 day</span>
+        <span class="note-text">closing in 1 day</span>
     }
     if (daysTillClose > 1 && daysTillClose < 4)
     {
-        <span class="note-text" style="color: red">closing in @daysTillClose days</span>
+        <span class="note-text">closing in @daysTillClose days</span>
     }
     if (daysTillClose > 4)
     {
