--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/CandidateApplicationFeedback.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/CandidateApplicationFeedback.cshtml
@@ -40,7 +40,7 @@
 
     <section class="section-border grid-wrapper" id="provider-info">
         <div class="grid grid-2-3">
-            <h2 class="heading-large">Training provider</h2>
+            <h2 class="heading-large">Provider details</h2>
             @if (Model.IsNasProvider)
             {
                 <p id="vacancy-nas-provider">Training provider selection is currently in progress</p>
